--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,3 +45,31 @@ header {
     color: #b3b3b3;
   }
   
+  .bannerButton {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+    font-size: 0.875rem;
+    font-weight: 600;
+    transition-duration: 0.3s;
+  }
+
+  .bannerButton:hover {
+    opacity: 0.75;
+  }
+
+  @media (min-width: 768px) {
+    .bannerButton {
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+      padding-left: 8px;
+      padding-right: 8px;
+      font-size: 1.25rem;
+    }
+  }
+  
